# ocloud

./: .env.example  .gitignore  GETTING_STARTED.md  Makefile  README.md  TODO.md  TODO.txt  example.config.txt  ogram_api.sh  ogram_cleaner.sh  pyproject.toml  requirements.txt
app/: Split.py  settings.py  utils.py
app/server/: cleaner.py  main.py
app/server/static/css/: index.css
app/server/static/js/: app.js  functions.js  router.js
app/server/static/pages/: home.html
app/server/templates/: index.html  refreshing.html
ocloud/: Split.py  config.py  settings.py  utils.py
ocloud/server/: cleaner.py  main.py
ocloud/server/static/css/: index.css
ocloud/server/static/js/: app.js  functions.js
ocloud/server/static/pages/: app.html
ocloud/server/templates/: index.html
static/js/: functions.js  route.js  router.js
static/pages/: home.html
templates/: index.html  refreshing.html
tests/: tests.py
