[tool.poetry]
name = "ocloud"
version = "0.1.0"
description = "Store Your Chunks freely"
authors = ["sanix-darker <s4nixd@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
Flask-Cors = "^4.0.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
mypy = "^1.9.0"
types-requests = "*"
types-Flask-Cors = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
